<resources>
    <string name="app_name">Snap Donate</string>
    <string name="app_description">Snap Donate Sample Applications</string>
    <string name="button_start">Start</string>
    <string name="activities_list_title_string">Vuforia Samples</string>
    <string name="activities_list_empty">No activities</string>
    <string name="update_error_authorization_failed_title">Authorization Error</string>
    <string name="update_error_project_suspended_title">Authorization Error</string>
    <string name="update_error_no_network_connection_title">Network Unavailable</string>
    <string name="update_error_service_not_available_title">Service Unavailable</string>
    <string name="update_error_update_sdk_title">Unsupported Version</string>
    <string name="update_error_timestamp_out_of_range_title">Clock Sync Error</string>
    <string name="update_error_request_timeout_title">Request Timeout</string>
    <string name="update_error_bad_frame_quality_title">Poor Camera Image</string>
    <string name="update_error_unknown_title">Service Unavailable</string>
    <string name="update_error_authorization_failed_desc">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="update_error_project_suspended_desc">The cloud recognition service has been suspended.</string>
    <string name="update_error_no_network_connection_desc">Please check your internet connection and try again.</string>
    <string name="update_error_service_not_available_desc">The service is unavailable, please try again later.</string>
    <string name="update_error_update_sdk_desc">The application is using an unsupported version of Vuforia.</string>
    <string name="update_error_timestamp_out_of_range_desc">Please update the date and time and try again.</string>
    <string name="update_error_request_timeout_desc">The network request has timed out, please check your internet connection and try again.</string>
    <string name="update_error_bad_frame_quality_desc">The camera does not have enough detail, please try again later.</string>
    <string name="update_error_unknown_desc">The service is unavaiable, please try again later.</string>
    <string name="content_desc_camera_button">Camera Button</string>
    <string name="overlay_build_target_help">Hold the device parallel to the target</string>
    <string name="target_quality_error_title">Low Quality Image</string>
    <string name="target_quality_error_desc">The image has very little detail, please try another.</string>
    <string name="menu_back">Vuforia Samples</string>
    <string name="menu_extended_tracking">Extended Tracking</string>
    <string name="menu_character_mode">Character Mode</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="autofocus">Autofocus</string>
    <string name="autofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="autofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>
    <string name="menu_datasets">DATASETS</string>
    <string name="menu_camera">CAMERA</string>
    <string name="menu_camera_front">Front</string>
    <string name="menu_camera_back">Rear</string>
    <string name="menu_button_red">Red</string>
    <string name="menu_button_blue">Blue</string>
    <string name="menu_button_yellow">Yellow</string>
    <string name="menu_button_green">Green</string>
    <string name="splash_screen_description">Vuforia Splash</string>
    <string name="snap">SNAP</string>
    <string name="to_do">TO DO</string>
    <string name="faqs">FAQS</string>
    <string name="favorites">FAVORITES</string>
    <string name="history">HISTORY</string>
    <string name="lets_donate">Ready to begin? Let\’s get snapping</string>
    <string name="fit_the_charity_logo">Ready to begin? Let\’s get snapping\nFit a charity logo in the frame and tap to focus</string>
    <string name="not_snaping">Press to search for a charity by name</string>
    <string name="you_have_snaped">You have snapped#8230;</string>
    <string name="you_have_chosen">You\'ve chosen#8230;</string>
    <string name="pick_how_much_you_want_to_donate">Choose how much to give</string>
    <string name="you_have_chosen_to_donate">You want to donate</string>
    <string name="donate_now">Donate now</string>
    <string name="Save_for_later">Save for later</string>
    <string name="pound_4">£4</string>
    <string name="pound_2">£2</string>
    <string name="pound_3">£3</string>
    <string name="pound_5">£5</string>
    <string name="pound_10">£10</string>
    <string name="pound_15">£15</string>
    <string name="pound_20">£20</string>
    <string name="pound_25">£25</string>
    <string name="pound_50">£50</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="todo">Todo</string>
    <string name="save">Save</string>
    <string name="ontinue">Continue</string>
    <string name="you_re_offline_making_donation">Uh oh, you\'re offline and making a donation requires a data connection! Please save your pledge to your To Do list and complete your donation later</string>
    <string name="we_saved_donation">We have saved your donation of </string>
    <string name="wonderful_people_at_justgiving">We work with the wonderful people at JustGiving to enable you to donate quickly and securely.</string>
    <string name="wonderful_people_at_virginmoney">We work with the wonderful people at Virgin Money to enable you to donate quickly and securely.</string>
    <string name="share_your_onation">Share your donation</string>
    <string name="add_charity_favourite">Add this charity to your\nfavourites for future donations</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="snap_again">Snap again</string>
    <string name="thanks_donation">Thanks a million for your gift.\nFeel good? You beautiful person</string>
    <string name="your_reference_number">Your reference number is:</string>
    <string name="twitter_posted"> Posted on Twitter</string>
    <string name="facebook_posted">Posted on Facebook</string>
    <string name="twitter_subject">I have just donated via SnapDonate! @SnapDonateApp</string>
    <string name="facebook_app_id">940378555978364</string>
    <string name="todo_description_text">You have snapped all the charities shown\nbelow and chosen specific amounts to give.\nAre you ready to complete each donation?</string>
    <string name="no_record_found">You\'ve got no charities awaiting donation!</string>
    <string name="finish_now">Finish now</string>
    <string name="search_hint">Enter charity name</string>
    <string name="favourite_description_text">You can donate directly to favourite charities by clicking on your logos below.</string>
    <string name="history_description_text">Here is a summary of all your donations.\nYou can use this list to quickly give again\nand even change the amounts if you wish</string>
    <string name="donate">Donate</string>
    <string name="donate_again">Donate again</string>
    <string name="total_donations">TOTAL DONATIONS</string>
    <string name="about_snapdonate">ABOUT SNAPDONATE</string>
    <string name="share">SHARE</string>
    <string name="privacy">PRIVACY</string>
    <string name="terms_conditions">TERMS &amp; CONDITIONS</string>
    <string name="share_snap_donate">Share SnapDonate</string>
    <string name="email_subject">Check out the brand new way of donating to charities with the SnapDonate App!</string>
    <string name="email_body">Hey,\n\nI\'ve just found a new way of donating to the charities I care about with SnapDonate.\n\nSimply open the app on your phone, point the camera at the charity logo and the app will recognise it. It\'s awesome. Choose how much you want to give – and that\'s it. All donations are securely processed via JustGiving.\n\nIt\'s totally free to use and is available on iOS and Android. Now you can donate to charities wherever and whenever you want!\n\nHave a great day!\n\nPS. SnapDonateApp is available on iOS [link to AppStore] and Android [link to Google Play]. Have a look!</string>
    <string name="facebook">Facebook</string>
    <string name="send_a_status_update">Post a Facebook update</string>
    <string name="twitter">Twitter</string>
    <string name="tweet_about_snapdonate">Tweet about SnapDonate</string>
    <string name="send_an_email_to_your_friends">Send an email to your friends</string>
    <string name="email">Email</string>
    <string name="what_is_snapdonate">What is SnapDonate?</string>
    <string name="about_text">SnapDonate is a new \'magic lens\' app that enables you to make quick one-off gifts to charity when you have no cash on you. Point your phone at a charity logo and – in a snap – you will have helped a good cause.\n\nThere are no SMS numbers nor QR codes to fiddle with. SnapDonate does not even need an internet connection and so it works everywhere: out in the street, on a train, or from your sofa.\n\nThe app was created by the SnapDonate Foundation, a not-for-profit entity that aims to keep impulse giving alive in an increasingly cashless society.\n\nThis is all possible due to the passion of people who believe that tomorrow will be brighter if we pull together. Join our mission to make the world a better place. One donation at a time.\nSnapDonate.org\n</string>
    <string name="about_tip">\n* To begin with, the app recognises dozens of the UK charities. The remaining 13,000 or so are all accessible by means of a drop-down list.</string>
    <string name="Privacy_lowercase">Privacy</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="no_internet_donation"> Uh oh, you\'re offline and making a donation requires a data connection!</string>
    <string name="read_more_of_this_FAQ">Read more of this FAQ</string>
</resources>